Fixes a deprecated method call